# Task-102

./: .gitignore  CMakeLists.txt  README.md
src/: DelimitedMessagesStreamParser.hpp  helpers.hpp
src/protobuf_parser/: DelimitedMessagesStreamParser.hpp  helpers.hpp
test/: Test_DelimitedMessagesStreamParser.cpp  Test_Helpers.cpp
tests/: CMakeLists.txt  test_DelimitedMessagesStreamParser.cpp  test_helpers.cpp
utils/proto/: CMakeLists.txt  message.proto
